# ProgrammingLanguageBenchmark-FFT_4096

./: .gitignore  .travis.yml  Makefile  Makefile-clang  Python-NumPyFFT.py  README.md  avgcalc.py
AWK/: Makefile  benchmark.awk  fft.awk
C#/: .gitignore  Benchmark.cs  Benchmark.csproj  CSharp.sln  CSharp.userprefs  CSharpFftDemo.csproj  CSharpFftDemo.nuget.props  CSharpFftDemo.sln  Dockerfile  DotnetBenchmark.cs  Fft.cs  Makefile  Makefile-csc  Managed.cs  MathNet.cs  Native.cs  PKGBUILD  Params.cs  Requirements.txt  ResurceManager.cs  Setup.iss  Setup.wxs  build-dotnet-core.sh  containerize.sh  create-armhf-deb.sh  create-windows-installer.cmd  dotnetcore.csproj  dotnetcore.sln  fft-benchmark.csproj  fft-benchmark.install  fft-benchmark.sln  project.json  publish-to-raspberry.cmd  run-dotnet-core.sh
C#-noComplex/: Benchmark.cs  C#-noComplex.csproj  CmdLineOptions.cs  Fft.cs  Makefile-csc  build-dotnet-core.sh  dotnetcore.csproj  fft_on_dotnet_core.csproj  publish_linux_arm.sh  typescript
C++/: Makefile  benchmark.cpp  fft.cpp  fft.h
C++-fast_double/: CMakeLists.txt  Makefile  benchmark.cpp  fft.cpp  fft.h
C-DFT-per-block-double/: benchmark.c  dft.c  dft.h
C-DFT-per-block-float/: benchmark.c  dft.c  dft.h
C-DFT-per-sample-double/: Makefile  benchmark.c  dft.c  dft.h
C-DFT-per-sample-float/: benchmark.c  dft.c  dft.h
C-fast--integerarithmetic/: benchmark.c  fft.c  fft.h
C-fast-all-complex-float-types/: fft.c  (+8 more)
C-fast-all-complex-float-types-multithread/: benchmark.c  dft_test.h  fft.c
C-fast-all-complex-float-types-opt-2x/: Makefile  Makefile-clang  Makefile-to-webassembly  fft.c
C-fast-all-complex-float-types-opt-4x/: fft.c  fft.h
C-fast-all-complex-float-types-opt-4x-multithread/: benchmark.c  fft.h
C-fast-all-complex-float-types-opt-8x-multithread/: benchmark.c  fft.h
(+320 files in other folders)
